[package]
name = "faustok"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.49.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.49.0"
tracing = "0.1.37"
tokio = "1.26.0"
serde = { version = "1.0.217", features = ["derive"] }
# serde_json = "1.0.134"
reqwest = { version = "0.12.11", features = ["json"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "unwind"

[profile.release.build-override]
strip = true
opt-level = 3
codegen-units = 1
